manifests/test/external-secrets/rbac.authorization.k8s.io_v1_clusterrole_external-secrets-view.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/name: external-secrets
    rbac.authorization.k8s.io/aggregate-to-admin: "true"
    rbac.authorization.k8s.io/aggregate-to-edit: "true"
    rbac.authorization.k8s.io/aggregate-to-view: "true"
  name: external-secrets-view
rules:
- apiGroups:
  - external-secrets.io
  resources:
  - externalsecrets
  - secretstores
  - clustersecretstores
  - pushsecrets
  - clusterpushsecrets
  verbs:
  - get
  - watch
  - list
- apiGroups:
  - generators.external-secrets.io
  resources:
  - acraccesstokens
  - beyondtrustworkloadcredentialsdynamicsecrets
  - cloudsmithaccesstokens
  - clustergenerators
  - ecrauthorizationtokens
  - fakes
  - gcraccesstokens
  - githubaccesstokens
  - quayaccesstokens
  - passwords
  - sshkeys
  - vaultdynamicsecrets
  - webhooks
  - grafanas
  - generatorstates
  - mfas
  - uuids
  verbs:
  - get
  - watch
  - list
