manifests/test/external-secrets/rbac.authorization.k8s.io_v1_role_external-secrets-leaderelection.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/name: external-secrets
  name: external-secrets-leaderelection
  namespace: external-secrets
rules:
- apiGroups:
  - ""
  resourceNames:
  - external-secrets-controller
  resources:
  - configmaps
  verbs:
  - get
  - update
  - patch
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - create
- apiGroups:
  - coordination.k8s.io
  resources:
  - leases
  verbs:
  - get
  - create
  - update
  - patch
